[package]
name = "wishget"
version = "0.2.1"
description = "An intended-as-generic Gacha Pull metadata toolkit."
authors = [
    "Renaud Lepage <root@cybik.moe>",
    "Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"
]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = true
strip = true
opt-level = 3

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
json = "0.12.4"

glob = "0.3.1"

anyhow = "1.0"
serde_json = "1.0"

open = "5.0"
colored = "2"
url = { version = "2", features = ["serde"] }
copypasta-ext = "0.4.4"
spinoff = "0.8"

directories = "5.0"
strum = { version = "0.25", features = ["derive"] }
